[package]
name = "dbscan"
version = "0.1.0"
authors = ["chrism"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# The plotlib requires the ContinusView `representations` field to be made public
[dependencies]
ndarray = "0.13"
plotlib = {path = "../forked_repos/plotlib"}
rand = "0.7.2"
rayon = "1.2.1"
